--- a/static/sass/_grid.sass
+++ b/static/sass/_grid.sass
@@ -63,9 +63,12 @@
 /* COL-3*/
 .grid-col3
   display: grid
-  grid-template-columns: repeat(auto-fill, minmax(340px, 360px))
-  grid-gap: 15px
-  justify-content: center
+  grid-template-columns: repeat(auto-fill, minmax(300px, 33.3333%))
+
+.grid-col2
+  display: grid
+  grid-template-columns: repeat(auto-fill, minmax(300px, 33.3333%))
+  grid-gap: 30px
 
 //@media screen and (max-width: 1199px)
 //  .grid-col3
