--- a/static/sass/_reset.sass
+++ b/static/sass/_reset.sass
@@ -1,3 +1,8 @@
+*
+  &::before, &::after
+    box-sizing: border-box
+
+
 body,
 div,
 dl,
@@ -25,6 +30,11 @@ menu
   margin: 0
   padding: 0
 
+body
+  min-height: 100vh
+  scroll-behavior: smooth
+  text-rendering: optimizeSpeed
+  line-height: 1.5
 
 table
   border-collapse: collapse
